Migrate yang-data-codec-gson to JUnit5
Migrated all tests to use JUnit5 Assertions, using rewrite-testing-frameworks.

JIRA: YANGTOOLS-1521
Change-Id: I0f8b99033ca895da190324c5458da12d2de9bb07
Signed-off-by: matus.matok <matus.matok@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>